# Lol-pro

./: .coverage  .gitignore  Dockerfile  README.md  calculate_skin.py  celerybeat-schedule.dir  demi.py  docker-compose.yml  image.svg+xml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docker/backend/: celery-worker-entrypoint.sh  web-entrypoint.sh
lol_pay/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
lol_pay/settings/: __init__.py  base.py  cache.py  celery.py  logging.py  storage.py
main/: admin.py  choices.py  forms.py  models.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_reviewmodel_stars.py  0003_alter_reviewmodel_reviews.py  0004_alter_reviewmodel_reviews.py  0005_alter_reviewmodel_reviews.py  0006_alter_reviewmodel_stars.py  0007_alter_reviewmodel_stars.py  0008_alter_reviewmodel_stars.py  0009_alter_reviewmodel_stars.py  0010_alter_reviewmodel_stars.py  0011_alter_reviewmodel_stars.py  0012_alter_reviewmodel_stars.py  0013_alter_reviewmodel_parent.py
main/templates/errors/: 400.html  403.html  404.html  500.html
main/templates/main/: index.html  reviews.html
news/: admin.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
news/management/commands/: parse_news.py
news/migrations/: 0001_initial.py  0002_alter_news_options.py  0003_alter_news_image.py  0004_alter_news_date_published.py  0005_alter_news_description.py  0006_alter_news_options.py
news/templates/news/: news.html
static/chars/assets/: index2name.json  index2skin.json  name2index.json  name2price.json  skins2price copy.json  skins2price.json
static/chars/lib/: LOLLoader.js  OrbitControls.js  dat.gui.min.js  index.js  model.js  three.min.js  viewer.js
static/css/: base.css  faq.css  index.css  license_agreement.css  login.css  messages.css  news.css  password_reset_form.css  placement_matches.css  profile.css  registration.css  reviews.css  store.css  store_account_page.css  store_accounts.css  store_base.css  store_elo_boost.css  store_elo_boost_choice.css  store_rp.css  store_skins.css
store/: admin.py  choises.py  consumers.py  filters.py  forms.py  models.py  routing.py  services.py  tests.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py  0002_coupon_is_active_alter_coupon_count_qualification.py  0003_skinsorder.py  0004_alter_skinsorder_price_char_and_more.py  0005_skinsorder_account_name_skinsorder_server_and_more.py  0006_rporder.py  0007_accountobject_accountorder_accountsimage.py  0008_alter_accountobject_short_description.py  0009_alter_accountsimage_image_chatroom_message.py  0010_alter_chatroom_buyer_alter_chatroom_seller_and_more.py  0011_alter_message_options_rename_sender_message_author_and_more.py  0012_remove_chatroom_group_name.py  0013_alter_message_options_chatroom_account_id.py  0014_rename_account_id_chatroom_account_and_more.py  0015_alter_accountobject_rang.py  0016_alter_accountobject_rang.py  0017_accountobject_is_confirmed.py  0018_message_massage_type.py  0019_reviewsellermodel.py  0020_alter_reviewsellermodel_buyer.py  0021_accountobject_buyer.py  0022_alter_accountobject_buyer.py  0023_alter_message_created.py  0024_alter_chatroom_account.py  0025_alter_chatroom_account.py  0026_accountobject_is_archive.py  0027_alter_accountobject_description.py  0028_alter_message_massage_type.py  0029_alter_accountobject_rang.py
store/templates/store/: faq.html  placement_matches.html  store.html  store_account_page.html  store_accounts.html  store_base.html  store_elo_boost.html  store_elo_boost_choice.html  store_rp.html  store_skins.html  store_skins_email.html
user/: admin.py  forms.py  middleware.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_user_discord.py  0004_user_balance_alter_user_avatar_alter_user_discord_and_more.py  0005_alter_user_balance_alter_user_discord_and_more.py  0006_alter_user_game_username.py  0007_alter_user_game_username.py
user/templates/user/: 0002_alter_user_avatar.py  base.html  confirm_email_change.html  license_agreement.html  login.html  messages.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  registration.html
utils/: mixins.py  services.py
